data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1353.wast
;; 4. **Test Description:**    - **Test Name:** Loop to Import Function Branch Test    - **Objective:** Test if `br` targeting a loop correctly transitions to an imported function.    - **Constraint:** Validates that backward branches are handled properly and the loop control flow is maintained across module calls.    - **Relation to Incorrect Handling:** Prevents errors arising from incorrectly jumping to a loop across module boundaries.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func))
    (func (loop
      (block (br 1)) ;; invalid branch to import function
    )))
  "invalid use of br"
)